# traveltailor

./: .gitignore  AGENTS.md  AI_TripTailor_Full_Project_Plan.md  CLAUDE.md  README.md  start-dev.sh  sum.md
backend/: .env.example  .env.production.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml  railway.json  render.yaml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20241031_01_create_users_and_preferences.py  20241031_02_create_travel_plan_tables.py  20241105_01_add_recommendation_tables.py  20241111_01_add_spatial_index.py
backend/scripts/: run_migrations.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: __init__.py  auth.py  exports.py  preferences.py  recommendations.py  travel_plans.py
backend/src/config/: __init__.py  database.py  settings.py
backend/src/core/: affiliate_tracker.py  cache.py  csrf.py  exceptions.py  geo_utils.py  security.py  tasks.py
backend/src/integrations/: agoda.py  amadeus.py  booking.py  google_maps.py  mapbox.py  openai_client.py  skyscanner.py
backend/src/metrics/: ai_pipeline.py
backend/src/middleware/: cost_tracking.py  security_headers.py
backend/src/models/: __init__.py  accommodation_option.py  daily_itinerary.py  flight_option.py  itinerary_place.py  place.py  route.py  travel_plan.py  user.py  user_preference.py
backend/src/schemas/: auth.py  base.py  exports.py  itinerary.py  pdf.py  place.py  preferences.py  recommendations.py  travel_plan.py
backend/src/services/ai/: __init__.py  budget_allocator.py  cache.py  fallback.py  planner.py  preference_analyzer.py  prompts.py  timeline_generator.py  types.py
backend/src/services/exports/: __init__.py  map_exporter.py
backend/src/services/pdf/: __init__.py  generator.py  storage.py
backend/src/services/pdf/templates/: itinerary.html  styles.css
backend/src/services/places/: geo_search.py  recommender.py
backend/src/services/preferences/: __init__.py  auto_updater.py  learning.py
backend/src/services/recommendations/: __init__.py  accommodation_recommender.py  flight_recommender.py
backend/src/services/routes/: optimizer.py
backend/src/utils/: sanitizer.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_places_recommender.py
docs/: AI_TravelTailor_Full_Project_Plan.md  architecture-analysis-report.md  deployment.md  design-evaluation-report.md  external-apis.md  gpt-deep-research.md  quickstart.md
frontend/: .env.example  .env.production.example  .eslintrc.json  CLAUDE.md  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
shared/: CLAUDE.md
(+78 files in other folders)
